                      "hidden_fields", "is_organisation" & "is_contact".
                - The class attribute 'views.billing.BillingDocGeneration.behaviours' has changed (see comments in code).
            * Emails :
                - In the brick classes 'ContactsBrick' & 'OrganisationsBrick',
                  the variable "field_hidden" is not injected anymore.
            * Commercial:
                - The method 'views.strategy.BaseScoreSetting.update_stategy()' has been renamed "update_strategy".
            * Geolocation:
                - _MapBrick.get_addresses_as_dict() is now an instance method, not a static one.
            * Mobile :
                - The class 'forms.PhoneInput' has been removed.
            * Polls :
                - The following views have been renamed :
                    - "polls__create_reply"               => "polls__create_replies"
                    - "polls__create_reply_from_pform"    => "polls__create_replies_from_pform"
                    - "polls__create_reply_from_campaign" => "polls__create_replies_from_campaign"
                    - "polls__create_reply_from_person"   => "polls__create_replies_from_person"
            * SMS :
                - In the brick class 'ContactsBrick', the variable "field_hidden" is not injected anymore.

    Internal breaking changes :
    ---------------------------
    (they should not cause problem if you have not deeply modified the source code of Creme)

        # In 'creme_core.auth.backend', the constants '_*_PREFIX' have been removed.
        # In 'creme_core.models' :
            - The method 'CremeModel._delete_stored_file()' is not static anymore.
            - In 'history' :
                - The method '_HistoryLineType._create_entity_backup()' has been removed.
                - In the class '_HLTCustomFieldsEdition', the attribute 'backup_attname'
                  & the method '_create_cvalue_backup' have been removed.